test: find by follower and followed